# Sieve

./: .gitignore  CMakeLists.txt  readme.md
include/sieve/: sieve.h
src/: sieve.cpp
testsrc/: sieve_test.cpp
